# rust-actix-weather

./: .gitignore  Cargo.toml  README.MD
src/: lib.rs  main.rs
src/domain/models/: weather.rs
