[package]
name = "w"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.26"
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
actix-rt = "2.8.0"
reqwest = {version = "0.11.18", features = ["json"]}
